--- a/LagerHantering/Content/style.css
+++ b/LagerHantering/Content/style.css
@@ -3,6 +3,7 @@
     font-family: "Segoe UI", Arial, sans-serif;
     background-color: #659FA6;
     text-shadow: none;
+    text-shadow: none;
 }
 
 tbody {
@@ -165,19 +166,8 @@ table {
         background-color: #B24A4A;
     }
 
-#statistic1 {
-    /*float: right;*/
-}
-
-
 h1 {
     margin-bottom: 20px;
-}
-
-
-
-#statistic2 {
-    /*float: right;*/
 }
 
 table {
@@ -185,11 +175,10 @@ table {
     background-color: #ffffff;
 }
 
+#KorrigeraLagersaldo {
+    float: right;
+}
 
-
-/*@media (max-width: 768px) {
-
-    .row {
-        width: 900px;
-    }
-}*/
+#editCompBackButton {
+    width: 175px;
+}
