--- a/LagerHantering/AngularApp/Views/article.html
+++ b/LagerHantering/AngularApp/Views/article.html
@@ -37,7 +37,7 @@
 
                     <!--<button class="btn btn-lg btn-info btn-block" type="submit" ng-click="saveComponent(item1)">Lägg till komponent i lista</button>-->
                     <div class="form-group">
-                        <div class="col-lg-10 col-lg-offset-2">
+                        <div id="addCompInList" class="col-lg-10 col-lg-offset-2">
                             <button type="submit" ng-click="saveComponent(item1)" class="btn btn-primary">Lägg komponent i lista </button>
                         </div>
                     </div>
