--- a/LagerHantering/AngularApp/Views/editArticle.html
+++ b/LagerHantering/AngularApp/Views/editArticle.html
@@ -2,34 +2,34 @@
 <html>
 <head>
     <title></title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
 </head>
 <body>
     <div ng-controller="editArticleController" ng-init="getComponentsByArticle()">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>Artikel</th>                      
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td hidden="hidden">{{article.Id}}</td>
-                        <td>{{article.name}}</td>
-                    </tr>
-                <thead>
-                    <tr>
-                        <th>Komponenter</th>
-                        <th>Antal</th>
-                    </tr>
-                </thead>
-                <tr ng-repeat="component in components">
-                    <td hidden="hidden">{{component.id}}</td>
-                    <td>{{component.name}}</td>
-                    <td>{{component.componentAmount}}</td>
+        <h1>
+            {{article.name}}
+        </h1>
+        <table border="1">
+
+            <tbody>
+
+
+
+            <thead>
+                <tr>
+
+                    <th>Komponenter</th>
+                    <th>Antal</th>
                 </tr>
-            </table>
-            <button class="glyphicon glyphicon-trash" type="submit" ng-click="deleteArticle()"></button>
-        </div>  
+            </thead>
+            <tr ng-repeat="component in components">
+                <td hidden="hidden">{{component.id}}</td>
+                <td>{{component.name}}</td>
+                <td>{{component.componentAmount}}</td>
+            </tr>
+        </table>
+        <button class="glyphicon glyphicon-trash" type="submit" ng-click="deleteArticle()"></button>
+    </div>
+    <a id="editArticle" href="#/article" class="btn btn-lg btn-info btn-block">Tillbaka</a>
 </body>
 </html>
