--- a/LagerHantering/AngularApp/Views/component.html
+++ b/LagerHantering/AngularApp/Views/component.html
@@ -56,10 +56,15 @@
                         <tr>
                             <td>{{totalprice}} Kronor</td>
                         </tr>
+
+
                     </tbody>
 
                 </table>
-
+                <button></button>
+                <div>
+                    <a href="http://imgur.com/HFA5ZMK">Tryck på den här :)</a>
+                </div>
 
             </div>
         </div>
