--- a/LagerHantering/AngularApp/Views/article.html
+++ b/LagerHantering/AngularApp/Views/article.html
@@ -7,10 +7,8 @@
 <body>
     <form class="form-horizontal">
         <fieldset>
-            <legend>Artiklar</legend>
+            <legend>Skapa artikel</legend>
             <div ng-controller="articleController" ng-init="getAllComponents()">
-
-
 
                 <div class="form-group">
                     <label for="textInput" class="col-lg-2 control-label">Artikelnamn:</label>
@@ -18,9 +16,6 @@
                         <input type="text" class="form-control" id="textInput" ng-model="article.Name">
                     </div>
                 </div>
-
-
-                <!--<select class="form-control" ng-model="selectedOption" ng-options="v.name for v in components "></select>-->
 
                 <div class="form-group">
                     <label for="select" class="col-lg-2 control-label">Komponenter</label>
@@ -35,7 +30,6 @@
                         <input id="number" type="number" min="1" ng-model="articleComponents.componentamount" />
                     </div>
 
-                    <!--<button class="btn btn-lg btn-info btn-block" type="submit" ng-click="saveComponent(item1)">Lägg till komponent i lista</button>-->
                     <div class="form-group">
                         <div id="addCompInList" class="col-lg-10 col-lg-offset-2">
                             <button type="submit" ng-click="saveComponent(item1)" class="btn btn-primary">Lägg komponent i lista </button>
@@ -50,12 +44,10 @@
                         </li>
                     </ul>
 
-
                     <div class="form-group">
                         <div class="col-lg-10 col-lg-offset-2">
                             <button type="submit" ng-click="saveArticle()" class="btn btn-primary">Spara artikel </button>
                         </div>
-
 
                         <div ng-init="getAllArticles()">
                             <br />
